--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,9 +2,7 @@
 	<div class="panel radius">
 		<h3>Sidebar</h3>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			STI SIG seeks to provide assignments, tutorials, guidance, and philosophies on how to better connect technology use to emergency management. From software like WebEOC to the complex algorithms of machine learning, the demand for computer use in emergency management is increasing at an exponential rate. By focusing on integrating science and technology with existing emergency management praxis, the STI SIG can help educate emergency managers to use cutting edge computational techniques and teach them to others quickly and effectively.
 		</p>
 	</div>
 
@@ -12,9 +10,15 @@
 
 
 	<div class="border-dotted radius b30">
-		<img src="http://placekitten.com/271/270" alt="uh, Placekitten">
+		<img src="sidebar-1.jpg" alt="other websites, places of interest">
 		<p class="text-left">
-			This is an advertisment with a crazy cat! <a href="http://placekitten.com/">More cats, please!</a>
+			Other sites on the web you might find useful!
 		</p>
+		<p class="text-left">
+			<ul>
+  				<li>EM Weekly</li>
+  				<li>The FEMA Higher Education Newsletter</li>
+  				<li>Third</li>
+			</ul>
 	</div>
 </aside>
