--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -10,7 +10,7 @@
 
 
 	<div class="border-dotted radius b30">
-		<img src="sidebar-1.jpg" alt="other websites, places of interest">
+		<img src="https://stisig.github.io/images/sidebar-1.jpg" alt="other websites, places of interest">
 		<p class="text-left">
 			Other sites on the web you might find useful!
 		</p>
