--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -6,19 +6,19 @@
 		</p>
 	</div>
 
-  <img class="b30" src="http://dummyimage.com/303x16:9/df4949/e27b3f.png&amp;text=Ugly+Ad+Space" alt="">
+  <!-- <img class="b30" src="http://dummyimage.com/303x16:9/df4949/e27b3f.png&amp;text=Ugly+Ad+Space" alt=""> -->
 
 
 	<div class="border-dotted radius b30">
 		<img src="https://stisig.github.io/images/sidebar-1.jpg" alt="other websites, places of interest">
 		<p class="text-left">
-			Other sites on the web you might find useful!
+			Other sites on the web you might find useful
 		</p>
 		<p class="text-left">
 			<ul>
-  				<li>EM Weekly</li>
-  				<li>The FEMA Higher Education Newsletter</li>
-  				<li>Third</li>
+  				<li><a href="https://sitchradio.com/shows/em-weekly/" target=_blank>EM Weekly</a></li>
+  				<li><a href="https://training.fema.gov/hiedu/arrpt/" target=_blank>The FEMA Higher Education Newsletter</a></li>
+  				<li><a href="https://www.rand.org/blog.topic.emergency-preparedness.html" target=_blank>Rand's posts on emergency preparedness</a></li>
 			</ul>
 	</div>
 </aside>
